# snakemake_scheduler_plugin_milp_ext

./: README.md  pyproject.toml  requirements.txt  setup.py  setup_plugin.sh
examples/: Snakefile  scheduler_config.yaml  system_profile.json
examples/.snakemake/metadata/: cmVzdWx0cy9jcHVfam9iLnR4dA==  cmVzdWx0cy9ncHVfam9iLnR4dA==
examples/results/: cpu_job.txt  gpu_job.txt
src/snakemake_scheduler_plugin_milp_ext/: __init__.py  scheduler.py
tests/: test_scheduler.py
